Added: Email Templates

--- a/backend/template/verification/verficationCode.hbs
+++ b/backend/template/verification/verficationCode.hbs
@@ -110,7 +110,8 @@
   <div class="container">
     <h1>Verify Your Account</h1>
     <p>Dear {{username}},</p>
-    <p>Please use the following verification code to verify your account:</p>
+    <p>Thank you for registering with our platform! To complete your registration and access all of our features, please
+      use the following verification code:</p>
     <p class="code" id="verification-code">{{verificationCode}}</p>
     <p>
       If you did not request this verification code, please ignore this email.
