--- a/backend/template/seller/loginVerification.hbs
+++ b/backend/template/seller/loginVerification.hbs
@@ -30,11 +30,11 @@
     <div class="container">
       <h1>Login Verification Code</h1>
       <p>Dear {{username}},</p>
-      <p>Thank you for choosing our platform to login to your account. To
-        complete the login process and access your account, please use the
+      <p>To complete the login process and access your account, please use the
         following verification code:</p>
       <p class="code" id="verification-code">{{verificationCode}}</p>
       <p>
+        This verification code is valid for 5 hours from the time of this email.
         If you did not request this verification code, please ignore this email
         or contact our support team.
       </p>
