admin dashboard completed

--- a/backend/template/verification/verifySeller.hbs
+++ b/backend/template/verification/verifySeller.hbs
@@ -50,7 +50,7 @@
     <p>
       To login as a seller, please follow these steps:
       <ol>
-        <li>Go to our main website at www.swiftmarket.com</li>
+        <li>Go to our main website at {{verificationLink}}</li>
         <li>Enter your login credentials (username and password) and click "Sign
           In"</li>
         <li>Check your email for a message from us with the subject line
