--- a/backend/template/userActions/userAccountChange.hbs
+++ b/backend/template/userActions/userAccountChange.hbs
@@ -85,8 +85,8 @@
             <h2>Warning: Password Changed</h2>
             <p>The following user's account has been updated:</p>
             <ul>
-                <li>Name: {{userUpdated.name}}</li>
-                <li>Email: {{userUpdated.email}}</li>
+                <li>Name: {{passwordUpdated.name}}</li>
+                <li>Email: {{passwordUpdated.email}}</li>
             </ul>
             <h2>Please verify that the changes made to this user's account are correct.</h2>
         </div>
